@@ -52,10 +52,10 @@ import org.elasticsearch.test.TestCustomMetaData;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 
 import static java.util.Collections.emptyMap;
@@ -293,7 +293,7 @@ public class ClusterStateTests extends ESTestCase {
     }
 
     public void testToXContent_FlatSettingTrue_ReduceMappingFalse() throws IOException {
-        Map<String, String> mapParams = new HashMap<>(){{
+        Map<String, String> mapParams = new HashMap<String,String>(){{
             put("flat_settings", "true");
             put("reduce_mappings", "false");
         }};
@@ -473,7 +473,7 @@ public class ClusterStateTests extends ESTestCase {
     }
 
     public void testToXContent_FlatSettingFalse_ReduceMappingTrue() throws IOException {
-        Map<String, String> mapParams = new HashMap<>(){{
+        Map<String, String> mapParams = new HashMap<String,String>(){{
             put("flat_settings", "false");
             put("reduce_mappings", "true");
         }};
@@ -673,7 +673,7 @@ public class ClusterStateTests extends ESTestCase {
                                                             .putMapping(new MappingMetaData("type",
                                                                 // the type name is the root value,
                                                                 // the original logic in ClusterState.toXContent will reduce
-                                                                new HashMap<>(){{
+                                                                new HashMap<String,Object>(){{
                                                                     put("type", new HashMap<String, Object>(){{
                                                                         put("key", "value");
                                                                     }});
@@ -757,7 +757,7 @@ public class ClusterStateTests extends ESTestCase {
             .settings(Settings.builder()
                 .put(SETTING_VERSION_CREATED, Version.CURRENT.id))
             .putMapping(new MappingMetaData("type",
-                new HashMap<>() {{
+                new HashMap<String,Object>() {{
                     put("type1", new HashMap<String, Object>(){{
                         put("key", "value");
                     }});
@@ -767,7 +767,7 @@ public class ClusterStateTests extends ESTestCase {
                 .build())
             .numberOfShards(1)
             .primaryTerm(0, 1L)
-            .putInSyncAllocationIds(0, new HashSet<>() {{
+            .putInSyncAllocationIds(0, new HashSet<String>() {{
                 add("allocationId");
             }})
             .numberOfReplicas(2)
@@ -792,10 +792,10 @@ public class ClusterStateTests extends ESTestCase {
                 .clusterUUID("clusterUUID")
                 .coordinationMetaData(CoordinationMetaData.builder()
                     .term(1)
-                    .lastCommittedConfiguration(new CoordinationMetaData.VotingConfiguration(new HashSet<>(){{
+                    .lastCommittedConfiguration(new CoordinationMetaData.VotingConfiguration(new HashSet<String>(){{
                         add("commitedConfigurationNodeId");
                     }}))
-                    .lastAcceptedConfiguration(new CoordinationMetaData.VotingConfiguration(new HashSet<>(){{
+                    .lastAcceptedConfiguration(new CoordinationMetaData.VotingConfiguration(new HashSet<String>(){{
                         add("acceptedConfigurationNodeId");
                     }}))
                     .addVotingConfigExclusion(new CoordinationMetaData.VotingConfigExclusion("exlucdedNodeId", "excludedNodeName"))
@@ -806,7 +806,7 @@ public class ClusterStateTests extends ESTestCase {
                     .put(SETTING_VERSION_CREATED, Version.CURRENT.id).build())
                 .put(indexMetaData, false)
                 .put(IndexTemplateMetaData.builder("template")
-                    .patterns(List.of("pattern1", "pattern2"))
+                    .patterns(Arrays.asList("pattern1", "pattern2"))
                     .order(0)
                     .settings(Settings.builder().put(SETTING_VERSION_CREATED, Version.CURRENT.id))
                     .putMapping("type", "{ \"key1\": {} }")
